clusters/home/speedtest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  namespace: speedtest
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Speedtest"
    gethomepage.dev/description: "WAN/ISP speed tracker (a2)"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "speedtest-tracker.png"
    gethomepage.dev/href: "https://speedtest.lan/"
    gethomepage.dev/pod-selector: "app=speedtest"
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["speedtest.lan"]
      secretName: speedtest-tls
  rules:
    - host: speedtest.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest
                port:
                  number: 80
